# BatteryService

./: BatteryService.service  CMakeLists.txt  CMakePresets.json  PKGBUILD  README.md
include/: UPowerBatteryInterface.h  WriteSysfs.h
src/: UPowerBatteryInterface.cpp  WriteSysfs.cpp  main.cpp
